# robot2

./: README.md
camera/pointcloud_cluster_detect/: CMakeLists.txt  package.xml
camera/pointcloud_cluster_detect/launch/: pointcloud_cluster_detect.launch
camera/pointcloud_cluster_detect/msg/: DetectedObject.msg  DetectedObjectArray.msg
camera/pointcloud_cluster_detect/src/: pointcloud_cluster_detect_core.cpp  pointcloud_cluster_detect_node.cpp
camera/realsense2_description/rviz/: urdf.rviz
camera/realsense2_description/urdf/: _d435.gazebo.xacro  _t265.gazebo.xacro  test_d435_camera.urdf.xacro
mir_robot/mir_driver/: package.xml
mir_robot/mir_driver/nodes/: fake_mir_joint_publisher.py
mir_robot/mir_dwb_critics/: package.xml
mir_robot/mir_navigation/: package.xml
mir_robot/mir_navigation/mprim/: genmprim_unicycle_highcost_5cm.py
robot2/robot2_description/: CMakeLists.txt  package.xml
robot2/robot2_description/config/: gripper_controller.yaml  macro.gripper_assembly.xacro  macro.top_module.xacro
robot2/robot2_description/launch/: upload_robot2_urdf.launch
robot2/robot2_description/rviz/: rviz.rviz
robot2/robot2_description/urdf/: robot2.gazebo.xacro  robot2.urdf.xacro  robot2_v1.urdf.xacro
robot2/robot2_gazebo/: CMakeLists.txt  package.xml
robot2/robot2_gazebo/launch/: robot2.launch  robot2_empty_world.launch  robot2_gazebo_common.launch  robot2_scene1.launch  (+2 more)
robot2/robot2_teleop/: CMakeLists.txt  package.xml  setup.py
robot2/robot2_teleop/launch/: robot2_teleop_key.launch
robot2/robot2_teleop/nodes/: robot2_teleop_key
(+32 files in other folders)
