<?xml version="1.0"?>
<package format="2">
  <name>robot2_teleop</name>
  <version>1.2.6</version>
  <description>
    Provides teleoperation using keyboard for Robot2.
  </description>
  <maintainer email="aws@todo.todo">aws</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
